# ImageView

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Plugins/: ImageProcessPluginInterface.h  ImageViewPluginInterface.h
Plugins/ImageViewPlugin/: CMakeLists.txt  ImageView.cpp  ImageView.h  ImageViewPlugin.cpp  ImageViewPlugin.h  ImageViewPlugin_global.h  viewform.ui
Plugins/MMPosePlugin/: CMakeLists.txt  MMPosePlugin.cpp  MMPosePlugin.h  MMPosePlugin_global.h
Plugins/MedianFilterPlugin/: CMakeLists.txt  MedianFilterPlugin.cpp  MedianFilterPlugin.h  MedianFilterPlugin_global.h
